[package]
name = "command-manager"
version = "0.0.2" # https://crates.io/crates/command-manager

edition = "2021"
rust-version = "1.69"

publish = true
description = "Rust command manager"
repository = "https://github.com/gyuho/command-manager"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
log = "0.4.18"

[dev-dependencies]
